# kerihost

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/ecosystem-package/: SKILL.md
.claude/skills/keri-blog/: SKILL.md
.claude/skills/keri-blog-image/: SKILL.md
.claude/skills/keri-blog-image/references/: grok-style-guide.md
.claude/skills/keriox/: SKILL.md
.claude/skills/keriox/references/: api-core.md  api-ext.md  errors.md  patterns.md  storage.md  tel.md  types.md
.github/: FUNDING.yml
crates/kerihost-core/: Cargo.toml
crates/kerihost-core/src/: error.rs  lib.rs
crates/kerihost-core/src/event/: inception.rs  interaction.rs  mod.rs  rotation.rs
crates/kerihost-core/src/receipt/: mod.rs  nontrans.rs
crates/kerihost-core/src/state/: key_state.rs  mod.rs
crates/kerihost-core/src/validation/: mod.rs
crates/kerihost-db/: Cargo.toml
crates/kerihost-db/src/: error.rs  lib.rs  traits.rs
crates/kerihost-db/src/dynamodb/: client.rs  escrows.rs  kel.rs  mod.rs  receipts.rs  states.rs
crates/kerihost-db/src/memory/: mod.rs
crates/kerihost-witness/: Cargo.toml
crates/kerihost-witness/src/: config.rs  error.rs  lib.rs  oobi.rs  processor.rs  receipt_generator.rs  witness.rs
crates/kerihost-witness/src/escrow/: mod.rs
docs/: CNAME  README.md  _config.yml  index.md  keri-host-artifact-plan.md  manifesto.md  services.md
docs/_data/: navigation.yml
docs/_includes/: footer.html
docs/_includes/head/: custom.html
docs/_posts/: 2026-02-06-actual-value-economy.md  2026-02-06-data-at-the-edge.md  2026-02-06-keri-ai-security-framework.md  2026-02-08-community-service-marketplace.md  2026-02-08-earth-ready-for-peace.md  2026-02-11-1990-internet-moment.md  2026-02-11-why-digital-identity.md  2026-02-13-accept-these-terms-or-what.md  2026-02-13-buy-your-ai-dont-rent-it.md  2026-02-13-fifteen-million-dollars-and-no-identity-layer.md  2026-02-13-follow-people-not-platforms.md  2026-02-13-identity-theft-protection-you-actually-control.md  2026-02-13-the-new-crypto.md  2026-02-13-you-can-leave-whenever-you-want.md  2026-02-14-elon-is-right-about-the-what.md  2026-02-14-money-is-people.md  2026-02-14-the-kids-are-not-alright-with-your-internet.md  2026-02-14-the-last-satisfying-application.md  2026-02-15-build-your-own-town-square.md  2026-02-18-the-map-has-a-keri-shaped-hole.md  2026-02-19-designing-keri-ecosystems-with-ai.md  2026-02-19-unbundling-the-monopoly.md  2026-02-21-just-coordinate.md  2026-02-21-shopping-for-terms.md  2026-02-21-the-railroad-moment.md  2026-02-25-no-migration-required.md
docs/assets/images/: keri-shaped-hole-linkedin.html
docs/blog/: 1990-internet-moment.md  actual-value-economy.md  community-service-marketplace.md  data-at-the-edge.md  earth-ready-for-peace.md  keri-ai-security-framework.md  why-digital-identity.md
docs/ecosystem-stories/: README.md  story-auto-loans.md  story-city-permits.md  story-commerce.md  story-community-safety.md  story-homeschool.md  story-municipalities.md  story-reputation-credit.md  story-service-orgs.md  story-sports-leagues.md  story-trades-coop.md  story-universities.md
docs/ecosystems/: genealogy-credentials.md  genealogy.md  humanitarian-service-marketplace-credentials.md  humanitarian-service-marketplace.md  index.md  small-trades-cooperative-credentials.md  small-trades-cooperative.md
docs/genealogy/: credential-catalog.md  ecosystem.yaml  trust-framework.md
docs/humanitarian-service-marketplace/: credential-catalog.md  ecosystem.yaml  trust-framework.md
docs/phase-0-content/: section-a-the-problem.md  section-b-different-way.md  section-d-builders.md  section-e-what-kerihost-is.md
docs/phase-0-foundations/: 01-manifesto.md  02-what-we-dont-do.md  03-threat-model.md  04-pattern-vocabulary.md
docs/phase-0-specialized/: no-central-workflow.md  regulator-narrative.md  what-if-keri-wins.md
docs/phase-1-architecture/: ai-actor-spec.md  anti-corruption-cases.md  architecture-spine.md  cross-org-workflow.md
docs/phase-2-demos/: README.md  demo-commerce.md  demo-municipality.md  demo-service-org.md  demo-trades.md  demo-university.md
docs/phase-3-ai-reputation/: ai-delegation-framework.md  reputation-marketplace.md
docs/phase-4-community/: homepage-structure.md  start-your-own-guide.md
docs/small-trades-cooperative/: credential-catalog.md  ecosystem.yaml  trust-framework.md
infrastructure/: cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: kerihost-stack.ts
infrastructure/lib/config/: constants.ts
infrastructure/lib/stacks/: api-stack.ts  data-stack.ts  witness-stack.ts
lambdas/witness-escrow-check/: Cargo.toml
lambdas/witness-escrow-check/src/: main.rs
lambdas/witness-oobi/: Cargo.toml
lambdas/witness-oobi/src/: main.rs
lambdas/witness-process/: Cargo.toml
lambdas/witness-process/src/: main.rs
lambdas/witness-query/: Cargo.toml
lambdas/witness-query/src/: main.rs
scripts/: download-whitepapers.sh  pdf2md.py
tests/integration/: helpers.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  witness.test.ts
tests/integration/scripts/: fix-libsodium-esm.cjs
