[package]
name = "kerihost-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core KERI types, validation, and state calculation for kerihost"

[dependencies]
cesride = { workspace = true }
parside = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true }
