[package]
name = "kerihost-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Database abstraction layer for kerihost"

[dependencies]
kerihost-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
