[package]
name = "witness-escrow-check"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lambda handler for scheduled escrow processing"

[[bin]]
name = "witness-escrow-check"
path = "src/main.rs"

[dependencies]
kerihost-core = { workspace = true }
kerihost-db = { workspace = true }
kerihost-witness = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
aws-config = { workspace = true }
chrono = { workspace = true }
